Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122043

The button appears to be pressed twice, even if it's pressed only once while you are pressing another button at the same time on the Android app

XMLWordPrintable

    • Android, iOS/tvOS/watchOS
    • 659d0d1b9 (dev), fe782bf23 (6.9), 495da7fad (6.8), 6bfff75e7 (tqtc/lts-6.5)
    • 2024wk10FOQtforAndroid, 2024wk12FOQtforAndroid, 2024wk16FOQtforAndroid, 2025wk12s1QtforAndroid

      If you press one button and then press a second button without releasing the first, the second button generates two onPressed() signals.

      To reproduce the issue, follow the steps below:

      1. Build and run the attached project on an Android device.

      2. Press and hold the button "Press first".
      3. Tap the button "Press second".

      " Pressed second true " will be printed twice.

      Reported from Android 12

       

        For Gerrit Dashboard: QTBUG-122043
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            mahdi.belila Mehdi Belila
            Votes:
            4 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes