Button: don't allow pressing if already pressed

Pressing one Button and then another, on a touchscreen, should not cause
either Button to emit pressed() twice.

tst_button.qml's test_multiTouch() now counts the pressedChanged and
pressed signals separately.

Fixes: QTBUG-122043
Change-Id: I2f353ebc29900f9cfba5e71425022473d3a32a26
Reviewed-by: Bartlomiej Moskal <bartlomiej.moskal@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 659d0d1b9214ff9f5a4d520c64809d1849ff2088)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit fe782bf23231c9bd2ab95bb16bc8e42801314129)
(cherry picked from commit 495da7fadf52281b5cb65e8060da103da50ac2c8)